<resources>
    <string name="app_name">BookApp</string>
    <string name="welcome_app">Добро пожаловать в BookApp</string>
    <string name="skip_register">Продолжить без аккаунта</string>
    <string name="login">Войти в аккаунт</string>
    <string name="password">Введите ваш пароль</string>
    <string name="email">Введите вашу почту</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="new_user_sign_up">Нет аккаунта? <b>Зарегистрироваться</b></string>
    <string name="register">Регистрация</string>
    <string name="name">Введите ваше имя</string>
    <string name="confirmPassword">Повторите ваш пароль</string>
    <string name="dashboard_admin">Админ панель</string>
    <string name="test_mail">abc@example.com</string>
    <string name="dashboard_user">Пользовательский панель</string>
    <string name="favorite">Избраное</string>
    <string name="book_name">Название книги</string>
    <string name="book_description">Описание книги</string>
    <string name="readBookBtn">Читать</string>
    <string name="book1">Семь дней до Мегиддо</string>
    <string name="book_1">
        Ктулху. В этом романе, кажется, нет Ктулху. Но я не совсем уверен, вначале надо его дописать. А всё остальное, пожалуй, тут есть… Ах да, в нём ещё нет интернета, его запретили Инсеки! И Луны нет, поскольку они раздробили её на куски. Над Землёй теперь Лунное кольцо с двумя самыми большими осколками — Селеной и Дианой. Но все уже привыкли. К тому же теперь есть кристаллики, за которые Продавцы могут продать что угодно. Хотя бы и Джоконду. Или две Джоконды, обе настоящие, такие же как в Лувре. Довольно доброе начало апокалипсиса, правда?
Вначале я назвал этот роман «Апокалипсис-лайт», что отвечало смыслу, но звучит не очень-то красиво. Потом я назвал его «Три дня индиго», потому что мне понравился срок и цвет. Но сейчас я вижу, что происходящие события займут не меньше недели, а цвет сместился к сиреневому и аметистовому. Так что — «Семь дней до Мегиддо». И красиво, и по смыслу.
Когда все это произошло, Макс заканчивал одиннадцатый класс. Однажды ночью он проснулся от воя сирен. Отец сказал, что началась война. В это трудно было поверить, как и трудно было понять, кто нанес первый удар. Лишь потом стало ясно, что речь вовсе не о внутреннем, не о земном конфликте.
Так в жизни людей появились Инсеки. Привычный уклад навсегда остался в прошлом. В больших городах возникали Гнезда, там и тут открывались Комки, где за кристаллы можно взять у Продавцов буквально что угодно. Покупать у людей почти перестали – качество товаров оставляло желать лучшего.
Луны тоже больше не было. После ее разрушения Землю окружило кольцо осколков, самые большие из которых получили названия Селена и Диана. Макс стал сёрчером. Используя специальные очки, он занимался поиском бесценных кристаллов. Старая жизнь осталась позади и почти забылась. К новой быстро привыкли. И никто не знает, сколько еще отведено человечеству на этой планете. Год? Месяц? Или всего неделя?
</string>
    <string name="book2">Тайна мертвого ректора.</string>
    <string name="book_2">После грандиозной и кровопролитной битвы граф Аверин с Кузей поступают на службу в Управление. Герои заслужили отдых, но даже в родном Петербурге настали не самые спокойные времена, а в довершение всего в московской колдовской Академии происходит несчастный случай: при странных обстоятельствах гибнет ректор, и на свободе оказывается сильнейший див. Но почему для расследования приглашают именно Гермеса Аверина? Кузя и Владимир тоже берутся за дело, но против главного подозреваемого улик нет. И что связывает его и Владимира?
</string>
    <string name="book3">Тихие шаги</string>
    <string name="book_3">Чьи-то тихие шаги – вот что слышат незадолго до гибели жертвы новой серии жестоких убийств в Шелково. Полиция в растерянности, поэтому Владу и Юле приходится вновь подключиться к расследованию, а Диану и Дениса кто-то продолжает намеренно втягивать в происходящее. Какая роль уготована каждому из них в чьем-то замысловатом сюжете? Чего этот человек добивается? И как со всем этим связана старинная шкатулка?
    </string>
    <string name="book4">Сильнее ветра</string>
    <string name="book_4">Способна ли я на измену?Я всегда считала, что нет…Ещё подростком Эйден Райс заселился в соседний дом, подарил свободу и научил любить. Мне всегда было его мало, и я хотела остановить мгновение и покорить неподвластный никому ресурс — время с ним. И вот спустя годы, на моём пальце красуется помолвочное кольцо, а впереди меня ждёт свадьба с самым лучшим мужчиной на свете. Но судьба та ещё стерва, и одно непредвиденное знакомство в Городе Ветров с Максвеллом Уайтом переворачивает всю мою жизнь с ног на голову. Заставляет испытывать противоречивые чувства. И запускает цепочку событий, в один день заканчивающихся шокирующей правдой, после которой я ощущаю себя так, словно вскрыла вены… Меня не успели спасти…А я забыла умереть…
    </string>
    <string name="book5">Лед-Кузнец</string>
    <string name="book_5">Тысячи циклов стоят Ледяные Чертоги Эргиаля.
Древний и таинственный Домен, где лед-кузнецы куют Предметы и Руны, равных которым нет в Единстве.
Говорят, им правит один из тех легендарных героев, что одолели Великих Червей.
Говорят, туда можно войти, но нельзя выйти, ибо касание неба смертельно.
Говорят, мрачный владыка вкладывает кусок звездного льда вместо сердца всем, кто волей или неволей увидел синий свет Эргиаля – и они становятся его вечными и преданными слугами.
Говорят, что за секретами Эргиаля неустанно охотится Вечность…
Тот, кто теперь носит имя Пламени Подобный, не слушает легенды.
Он их творит.
И он знает, что в Эргиале его ждет один из тех, кого прежде называли Тысячью Братьев. Тот, кто всегда видел дальше и умел больше прочих. Тот, кто сумел избежать оков Небесного Трона.
Тот, кому небесное мастерство дало его имя…
Ледяной Кузнец.
</string>
    <string name="book6">Звездная кровь – 8. Псы вечности</string>
    <string name="book_6">Сезон Дикой Охоты продолжается.
У нас мало времени.
Мы знаем, что Черви придут гасить золотой свет юного Игг-Древа, и знаем, что земные технологии не помогут их остановить. Только Руны и Звездная Кровь, но Белый Дьявол теперь далеко, а проблем и забот становится все больше.
С «Хельги» падают капсулы, земному фригольду угрожают новые враги, ядро Домена хранят таинственные существа из темных земель… Много испытаний предстоит пройти, чтобы стать сильнее. И самое опасное из них – зловещие Псы Вечности, что улыбаются из Саркофагов Бесконечного Сна.
</string>
    <string name="book7">Слово пацана</string>
    <string name="book_7">Если вы выросли в России в конце XX века, то в вашей жизни были уличные драки. Эта книга о тех, кто сделал насилие своим кредо: бил и попадал под раздачу – профессионально, ежедневно, беспощадно. Это пацаны, участники бесчисленных молодежных группировок, наводнивших поздний Советский Союз. Первым городом, в котором явление стало по-настоящему массовым, была Казань.
Роберт Гараев, автор этой книги, попал в «Низы», одну из местных банд, еще в средней школе. Спустя 30 лет он решил выяснить, откуда взялся казанский феномен – полторы сотни подростковых группировок, что сначала «делили асфальт» в драках район на район, а затем начали массово истреблять себе подобных, – и как вспоминают те суровые дни сами пацаны, бывшие сотрудники милиции, адвокаты и простые жители города, обезображенного страхом и жестокостью. Это единственная книга, целиком составленная из голосов выживших – и желающих рассказать правду.
    </string>
    <string name="book8">Дюна первая треодлгия</string>
    <string name="book_8">
    Спустя 24 тысячелетия человечество не изменилось: все те же войны и интриги.
        В далекой мультигалактической империи враждуют два великих дома – Атрейдесы и Харконнены. Последним удается склонить Императора на свою сторону, и юного наследника дома Атрейдесов – Пола – вместе с семьей высылают на далекую и пустынную планету Арракис, называемую также Дюной. Ужасные бури, гигантские черви, жестокие фанатики, фримены, и единственный во всей Вселенной источник Пряности, важнейшей субстанции в Империи, – таков новый дом Пола.
        Впереди его ждет сражение не только за Арракис, для чего ему придется стать лидером фрименов Диб, но и за будущее существование своего Дома.
        В 1984 году роман «Дюна» был экранизирован культовым режиссером Дэвидом Линчем, а в начале XXI века по нему было снято несколько мини-сериалов.
</string>
    <string name="book9">Трансерфинг себя</string>
    <string name="book_9">Мы самоидентифицировали себя со своими телом и разумом, своим аватаром. Но мы есть нечто большее, чем привыкли считать. Это наш Дух, который всегда находится рядом с нами – позади нас и над нами.
 Сейчас, в Новом времени, открылась доступная для среднего, «непродвинутого» человека техника контакта со своим Духом и входа в то, что мы называем «состояние Духа». То есть стало известно, как это конкретно осуществить.
 Соединяясь со своим первоисточником, вы обретаете СИЛУ ДУХА, со всеми сопутствующими атрибутами: способность управлять собой и своей реальностью;
 действовать эффективно в сложных ситуациях;
 исцелять себя от физических и психических недугов;
 избавляться от деструктивных программ и комплексов;
 программировать себя на обновление, регенерацию, эволюцию;
 находить Свою миссию, Свою реализацию в этой жизни;
 и еще многое другое.</string>
    <string name="book10">Сильнее ветра 2. Горизонт свободы</string>
    <string name="book_10">ПРОДОЛЖЕНИЕ КНИГИ "СИЛЬНЕЕ ВЕТРА".
Сколько стоит мужское слово?
Слово Максвелла Уайта не стоит ничего.
После страшных событий в Лас-Вегасе он нашёл меня, дал обещание и взамен забрал моё. Я выполнила свою часть сделки: собрала по частям своё изуродованное сердце.
А он… Он решил вырвать его вновь.
Наглядно, с присущей ему жестокостью, показал, как мало я значу для него. Провёл между нами жирную черту, за которую запретил переступать одним лишь взглядом.
Но судьба сталкивает нас снова, и роковая встреча в Яме меняет всё. Срывает с него маску равнодушия и приоткрывает двери в мир, в котором ставки слишком высоки. Где на кону оказывается не только моё сердце, но и моя жизнь.
    </string>
    <string name="book11">Дизайнер Жорка. Книга 1. Мальчики</string>
    <string name="book_11">«Мальчики» – интригующая завязка, первая книга нового большого романа Дина Рубиной «Дизайнер Жорка». Читателю предстоит захватывающее путешествие из довоенной Варшавы в советскую Астрахань, из военной Бухары – в послевоенную Польшу…
В доме десятилетнего Ицика на разные голоса отсчитывают время 387 часов. Уникальную коллекцию начал собирать дед мальчика, а затем продолжил отец – оба искусные часовщики. Убегая от гитлеровского нашествия, семья оказывается в эвакуации в Азии. После войны повзрослевший Ицик, зовущийся теперь Цезарем, возвращается в отчий дом, но вместо коллекции часов находит лишь развалины. Эта утрата подтолкнет его ввязаться в дело, которое газетчики назовут «элегантным ограблением».
Через десятилетия на сцену выйдет Дизайнер Жора.
Он же Жорж, Георг, Юрген, Щёрс – в зависимости от страны пребывания. А пока он всего лишь странный мальчик-сирота Жорка. Судьба сведет его и пожилого Цезаря Адамовича, работающего теперь механикомлаборантом в лепрозории. Судьба же свяжет их тайной одной коллекции.
    </string>
    <string name="book12">Дюна</string>
    <string name="book_12">
        Роман «Дюна», первая книга прославленной саги, знакомит читателя с Арракисом – миром суровых пустынь, исполинских песчаных червей, отважных фрименов и таинственной специи. Безграничная фантазия автора создала яркую, почти осязаемую вселенную, в которой есть враждующие Великие Дома, могущественная Космическая Гильдия, загадочный Орден Бинэ Гессерит и неуловимые ассасины.
    </string>
    <string name="book13">Девчонки, я приехал!</string>
</resources>