<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".LoginActivity">
    
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">
    
    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"/>
        
        
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iconIv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"
        android:textSize="28sp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_above="@+id/noAccountTv"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="225dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <!--email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_email_gray"
                    android:hint="@string/email"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColorHint="@color/grey01"/>

            </com.google.android.material.textfield.TextInputLayout>
            <!--Forgot password-->
            <TextView
                android:id="@+id/forgotTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordTil"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:textColor="@color/grey02"/>


            <!--Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_below="@+id/emailTil"
                android:layout_marginTop="5dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_lock_gray"
                    android:hint="@string/password"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="@color/grey01"/>


                <!--Login Button-->
                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/forgotTv"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_button01"
                    android:text="@string/login"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

    </ScrollView>


    <!--No Account, Register-->
    <TextView
        android:id="@+id/noAccountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/new_user_sign_up"
        android:textColor="@color/black"/>
    
</RelativeLayout>