<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".Books.Book10Activity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/back02"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="5dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/ic_back_white" />

            <ImageView
                android:id="@+id/BookImage"
                android:layout_width="200dp"
                android:layout_height="260dp"
                android:layout_weight="1"
                android:src="@drawable/book10" />

            <ImageView
                android:id="@+id/favoriteBtn"
                android:layout_width="10dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_favorite_border_white" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="380dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bookTitle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/erica_one"
                    android:text="@string/book10"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/BookDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/arimo"
                    android:text="@string/book_10"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/readBtn"
                android:layout_width="196dp"
                android:layout_height="55dp"
                android:layout_marginEnd="104dp"
                android:text="@string/readBookBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/download_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.625" />

            <ImageButton
                android:id="@+id/download_btn"
                android:layout_width="81dp"
                android:layout_height="53dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7"
                android:src="@drawable/ic_download_white" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
